--- a/_includes/archive-single-cv.html
+++ b/_includes/archive-single-cv.html
@@ -29,8 +29,14 @@
     <h3 class="archive__item-title" itemprop="headline">
       {% if post.link %}
         <a href="{{ post.link }}">{{ title }}</a> <a href="{{ base_path }}{{ post.url }}" rel="permalink"><i class="fa fa-link" aria-hidden="true" title="permalink"></i><span class="sr-only">Permalink</span></a>
+        {% if post.award%}
+        <b>({{ post.award}})</b>
+        {% endif %}
       {% else %}
         <a href="{{ base_path }}{{ post.url }}" rel="permalink">{{ title }}</a>
+        {% if post.award%}
+        <b>({{ post.award}})</b>
+        {% endif %}
       {% endif %}
     </h3>
     {% if post.read_time %}
